--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -1,12 +1,17 @@
-# .github/workflows/holamundo.yml
+# .github/workflows/hola-mundo.yml
 name: .NET Core Hello World
 
 on:
   push:
+    branches:
+      - aprendiendo-github-actions
 
 jobs:
-  hello-world:
+  build:
     runs-on: ubuntu-latest
+    defaults:
+            run:
+              working-directory: ./HelloWorldApp
 
     steps:
       - name: Checkout repository
@@ -15,7 +20,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: "7.x" # Specify the .NET version
+          dotnet-version: '7.x' # Specify the .NET version
 
       - name: Restore dependencies
         run: dotnet restore
