--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -29,4 +29,4 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Run the C# application
-        run: dotnet run --project HelloWorldApp
+        run: dotnet run --project HelloWorldApp.csproj
